[gd_scene load_steps=29 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://character/Vincent/jump/NewJump/jump2.png" type="Texture" id=2]
[ext_resource path="res://character/Vincent/RunRight/runR_5.png" type="Texture" id=3]
[ext_resource path="res://character/Vincent/RunRight/runR_6.png" type="Texture" id=4]
[ext_resource path="res://character/Vincent/jump/NewJump/jump3.png" type="Texture" id=5]
[ext_resource path="res://character/Vincent/jump/NewJump/jump4.png" type="Texture" id=6]
[ext_resource path="res://character/Vincent/jump/NewJump/jump1.png" type="Texture" id=7]
[ext_resource path="res://character/Vincent/jump/NewJump/jump5.png" type="Texture" id=8]
[ext_resource path="res://character/Vincent/RunRight/runR_3.png" type="Texture" id=9]
[ext_resource path="res://character/Vincent/RunRight/runR_2.png" type="Texture" id=10]
[ext_resource path="res://character/Vincent/RunRight/runR_4.png" type="Texture" id=11]
[ext_resource path="res://character/Vincent/RunRight/runR_7.png" type="Texture" id=12]
[ext_resource path="res://character/Vincent/RunRight/runR_8.png" type="Texture" id=13]
[ext_resource path="res://character/Vincent/RunRight/runR_1.png" type="Texture" id=14]
[ext_resource path="res://character/Vincent/Idle/idle_3.png" type="Texture" id=15]
[ext_resource path="res://character/Vincent/Idle/idle_4.png" type="Texture" id=16]
[ext_resource path="res://character/Vincent/Idle/idle_5.png" type="Texture" id=17]
[ext_resource path="res://character/Vincent/Idle/idle_6.png" type="Texture" id=18]
[ext_resource path="res://character/Vincent/Idle/idle_1.png" type="Texture" id=19]
[ext_resource path="res://character/Vincent/Idle/idle_2.png" type="Texture" id=20]
[ext_resource path="res://attack/4.png" type="Texture" id=21]
[ext_resource path="res://attack/1.png" type="Texture" id=22]
[ext_resource path="res://attack/3.png" type="Texture" id=23]
[ext_resource path="res://attack/8.png" type="Texture" id=24]
[ext_resource path="res://attack/2.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "runRight",
"speed": 15.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 20 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 24 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": false,
"name": "jump",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.9865, 59.8601 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.2263, 60.1734 )

[node name="player" type="KinematicBody2D"]
position = Vector2( 145.92, 179.594 )
scale = Vector2( 1.7, 1.7 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -46.748, 58.2607 )
scale = Vector2( 0.65, 0.624 )
frames = SubResource( 1 )
animation = "Idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -46.8662, 69.4316 )
scale = Vector2( 1.7, 1 )
shape = SubResource( 2 )

[node name="AttackArea" type="Area2D" parent="." groups=[
"knives",
]]

[node name="CollisionAttack" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 13.3554, 58.8627 )
shape = SubResource( 3 )
disabled = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
